[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Main Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=2]
[ext_resource path="res://textures/Main Menu/panel.png" type="Texture" id=3]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://textures/Main Menu/left.png" type="Texture" id=6]
[ext_resource path="res://textures/Main Menu/left_pressed.png" type="Texture" id=7]
[ext_resource path="res://textures/Main Menu/right.png" type="Texture" id=8]
[ext_resource path="res://textures/Main Menu/right_pressed.png" type="Texture" id=9]
[ext_resource path="res://textures/Main Menu/select.png" type="Texture" id=10]
[ext_resource path="res://textures/Main Menu/select_pressed.png" type="Texture" id=11]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.5
margin_bottom = 4.5
script = ExtResource( 1 )

[node name="RichTextLabel" type="Label" parent="."]
margin_left = 514.0
margin_top = 55.0
margin_right = 1024.0
margin_bottom = 139.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_CHAR"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -299.0
margin_right = 512.0
margin_bottom = 292.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = -36.0
margin_right = 166.5
margin_bottom = 36.0

[node name="Play" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 333.0
margin_bottom = 34.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "KEY_Play"

[node name="Multiplayer" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 38.0
margin_right = 333.0
margin_bottom = 72.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "KEY_MULTI"

[node name="Quit" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 76.0
margin_right = 333.0
margin_bottom = 110.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "KEY_Quit"

[node name="CharacterSelector" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -306.0
margin_bottom = 293.0
rect_min_size = Vector2( 400, 0 )

[node name="HBoxContainer" type="Control" parent="CharacterSelector"]
margin_top = 106.0
margin_right = 510.0
margin_bottom = 206.0

[node name="SelectedCharacter" type="Sprite" parent="CharacterSelector/HBoxContainer"]
position = Vector2( 256.5, 54.0001 )
texture = ExtResource( 5 )

[node name="Previous" type="TextureButton" parent="CharacterSelector/HBoxContainer"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Next" type="TextureButton" parent="CharacterSelector/HBoxContainer"]
margin_left = 310.0
margin_right = 410.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Select" type="TextureButton" parent="CharacterSelector"]
margin_top = 246.0
margin_right = 510.0
margin_bottom = 374.0
rect_min_size = Vector2( 256, 128 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="TextureRect/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CharacterSelector/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="CharacterSelector/Select" to="." method="_on_Select_pressed"]
[connection signal="ready" from="CharacterSelector/Select" to="." method="_on_Select_ready"]
